Добавляет переменные для цветов и шрифтов

--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,19 +1,27 @@
 //template variables
 $column-gap: 30px;
+$column-gap-mobile: 20px;
 $animation-time: 250ms;
 $animation-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-$mobile-width: 480px;
+$mobile-width: 320px;
 $tablet-width: 768px;
-$desktop-width: 1200px;
+$desktop-width: 1024px;
 
 $container-width: 1200px;
 
 $main-font: 'Roboto', sans-serif;
 //enв template variables
 
-$logo-font: 'Raleway', sans-serif;
-
-$primary-text-color: #757575;
-$title-text-color: #212121;
-$accent-color: #2196f3;
+$header-text-color: #ffffff;
+$main-text-color: #000000;
+$footer-text-color: #757575;
+$accent-color: #ff6b01;
+$accent-text-color: #ffffff;
+$current-color: #ff6b01;
+$current-text-color: #ffffff;
+$details-card-main-text-color: #000000;
+$details-card-items-text-color: #8c8c8c;
+$details-card-accent-text-color: #ffffff;
+$header-background-color: rgba(0, 0, 0, 0.56);
+$main-background-color: #ffffff;
