add footer markup in all versions

--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -12,11 +12,11 @@ $desktop-width: 1024px;
 $container-width: 1200px;
 
 $main-font: 'Roboto', sans-serif;
-//enв template variables
+//end template variables
 
 $header-text-color: #ffffff;
 $main-text-color: #000000;
-$footer-text-color: #757575;
+$footer-text-color: #545454;
 
 $accent-color: #ff6b01;
 $accent-text-color: #ffffff;
@@ -26,3 +26,4 @@ $details-card-items-text-color: #8c8c8c;
 
 $header-background-color: rgba(0, 0, 0, 0.56);
 $main-background-color: #ffffff;
+$footer-background-color: #f7f7f7;
