--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,1 +1,10 @@
-<footer>some footer</footer>
+<footer class="footer">
+  <div class="footer__container">&copy; 2021 | All Rights Reserved |</div>
+  <div class="footer__container">
+    Developed with&nbsp;<svg class="footer__icon" width="14" height="13">
+      <use href="./images/sprite.svg#icon-heart"></use>
+    </svg>
+    by
+    <a href="#">GoIT Students</a>
+  </div>
+</footer>
