--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -1,6 +1,7 @@
 body {
   font-family: $main-font;
   color: $main-text-color;
+  font-size: 12px;
 
   &.modal-open {
     overflow: hidden;
@@ -17,8 +18,11 @@ p {
   padding: 0;
 }
 
-a {
-  color: $accent-color;
+// a {
+//   color: $accent-color;
+// }
+a:visited {
+  color: inherit;
 }
 
 h1,
