--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,3 +10,6 @@
 @import './base/common';
 @import './base/page-container';
 @import './base/container';
+
+
+@import './layouts/films-list-section';
