changed css styles

--- a/src/partials/films-list-section.html
+++ b/src/partials/films-list-section.html
@@ -1,18 +1,10 @@
-<section class="films-section">
+<section class="films">
     <div class="container">
-        <ul class="films-list">
-            <li>
-                <div class="div"></div>
-            </li>
-            <li>
-                <div class="div"></div>
-            </li>
-            <li>
-                <div class="div"></div>
-            </li>
-            <li>
-                <div class="div"></div>
-            </li>
+        <ul class="films__list">
+            <li class="films__list-item"></li>
+            <li class="films__list-item"></li>
+            <li class="films__list-item"></li>
+            <li class="films__list-item"></li>
         </ul>
     </div>
 </section>
