add modal plugin & markup boiler plate for slider

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,4 +11,7 @@
 @import './base/page-container';
 @import './base/container';
 
+@import './components/_modal';
+@import './components/footer-modal';
+
 @import './layouts/footer';
