--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -24,6 +24,7 @@ $accent-text-color: #ffffff;
 $details-card-main-text-color: #000000;
 $details-card-items-text-color: #8c8c8c;
 
+$main-background-color: #ffffff;
 $header-background-color: rgba(0, 0, 0, 0.56);
 $main-background-color: #ffffff;
 $footer-background-color: #f7f7f7;
