--- a/src/sass/layouts/_films-list-section.scss
+++ b/src/sass/layouts/_films-list-section.scss
@@ -22,7 +22,7 @@
 }
 
 .films__list-item {
-    background-color: black;
+    background-color: black; //todo: delete background after adding real cards
 
     @include for-phone-only {
         &:not(:last-child) {
