Карточка и функция отрисовки(не до конца)

--- a/src/partials/films-list-section.html
+++ b/src/partials/films-list-section.html
@@ -1,10 +1,5 @@
 <section class="films">
-    <div class="container">
-        <ul class="films__list">
-            <li class="films__list-item"></li>
-            <li class="films__list-item"></li>
-            <li class="films__list-item"></li>
-            <li class="films__list-item"></li>
-        </ul>
-    </div>
+  <div class="container">
+    <ul class="films__list"></ul>
+  </div>
 </section>
