--- a/src/templates/one-card-mrc.hbs
+++ b/src/templates/one-card-mrc.hbs
@@ -2,13 +2,13 @@
 <li class="films__list-item">
 <div class="one-card one-card_home">
     <div>
-        <img src={{poster_path}} alt={{title}}>
+        <img src={{poster_url}} alt={{title}}>
     </div>
     <div>
         <p>{{title}}</p>
         
         <p>
-            {{stringGenries}},
+            {{stringGenries}}
             
         </p>
 
