One-card and function rendering

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,4 +12,5 @@
 @import './base/container';
 
 @import './layouts/footer';
-@import './layouts/films-list-section'
+@import './layouts/films-list-section';
+@import './layouts/one-card';
