remove duplicate variable & footer link style

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -5,6 +5,6 @@
       <use href="./images/sprite.svg#icon-heart"></use>
     </svg>
     by
-    <a href="#" class="js-footer-modal">GoIT Students</a>
+    <a href="#" class="footer__link js-footer-modal">GoIT Students</a>
   </div>
 </footer>
