--- a/src/sass/layouts/_one-card.scss
+++ b/src/sass/layouts/_one-card.scss
@@ -2,7 +2,7 @@
   &-img {
     border-radius: 5px;
   }
-  &-bximg {
+  &-box-img {
     margin-bottom: 10px;
   }
   &-title {
@@ -19,7 +19,7 @@
     font-size: 12px;
     line-height: 16px;
   }
-  &-bxdes {
+  &-box-description {
     display: flex;
     justify-content: start;
   }
