add localStorage function

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,1 +1,4 @@
-<header>some header</header>
+<header>
+    <button class="watched">Add to Watched</button>
+    <button class="queue">Add to Queue</button>
+</header>
