Created template for modal window

--- a/src/partials/films-list-section.html
+++ b/src/partials/films-list-section.html
@@ -1,4 +1,13 @@
-<section class="films">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+  <section class="films">
     <div class="container">
         <ul class="films__list">
             <li class="films__list-item"></li>
@@ -7,4 +16,6 @@
             <li class="films__list-item"></li>
         </ul>
     </div>
-</section>
+</section>  
+</body>
+</html>
