--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,10 +1,21 @@
-<footer class="footer">
-  <div class="footer__container">&copy; 2021 | All Rights Reserved |</div>
-  <div class="footer__container">
-    Developed with&nbsp;<svg class="footer__icon" width="14" height="13">
-      <use href="./images/sprite.svg#icon-heart"></use>
-    </svg>
-    by
-    <a href="#">GoIT Students</a>
-  </div>
-</footer>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <footer class="footer">
+      <div class="footer__container">&copy; 2021 | All Rights Reserved |</div>
+      <div class="footer__container">
+        Developed with&nbsp;<svg class="footer__icon" width="14" height="13">
+          <use href="./images/sprite.svg#icon-heart"></use>
+        </svg>
+        by
+        <a href="#">GoIT Students</a>
+      </div>
+    </footer>
+  </body>
+</html>
