--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -45,3 +45,14 @@ h6 {
   margin: 0;
   padding: 0;
 }
+
+ul {
+  padding: 0;
+  margin: 0;
+}
+
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
