fixed localStorage settings

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,1 @@
-<header>
-    <button class="watched">Add to Watched</button>
-    <button class="queue">Add to Queue</button>
-</header>
+<header>some header</header>
