--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,5 +10,5 @@
 @import './base/common';
 @import './base/page-container';
 @import './base/container';
-
+@import './layouts/header';
 @import './layouts/footer';
