--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -13,6 +13,7 @@ img {
   max-width: 100%;
   height: auto;
 }
+
 p {
   margin: 0;
   padding: 0;
@@ -42,6 +43,12 @@ h6 {
 
 .list {
   list-style: none;
+  margin: 0;
+  padding: 0;
+}
+a, ul {
+  text-decoration:none;
+  list-style-type: none;
   margin: 0;
   padding: 0;
 }
