--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -83,6 +83,7 @@
   display: flex;
 
   li{
+    list-style-type: none;
     margin-left: 39px;
   }
 }
@@ -90,6 +91,8 @@
 .nav-el {
   position: relative;
   padding-bottom:2px;
+  text-decoration:none;
+  
 
   &:hover,
   &:focus {
