add slides generation & slide by click

--- a/src/partials/footer-modal.html
+++ b/src/partials/footer-modal.html
@@ -6,62 +6,18 @@
       </svg>
     </button>
     <div class="slider">
-      <ul class="slider__inner-wrapper list">
-        <li class="slide">
-          <article class="footer-modal__card card">
-            <div class="card__team-info">
-              <img src="./images/hanna-hryhorieva.jpg" class="card__photo" alt="Hanna Hryhorieva" />
-              <p class="card__name">
-                <a
-                  href="https://github.com/HannaHryhorieva"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  ><svg class="card__icon" width="18" height="16">
-                    <use href="./images/sprite.svg#icon-github"></use></svg></a
-                >Hanna Hryhorieva
-              </p>
-              <p class="card__city">Ukraine, Kharkiv</p>
-            </div>
-            <div class="card__work-info">
-              <p class="card__role">SCRUM master</p>
-              <p class="card__text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum vitae saepe odio
-                consectetur, optio doloribus, soluta reiciendis officiis consequatur qui molestiae
-                tempore expedita.
-              </p>
-            </div>
-          </article>
-        </li>
-      </ul>
-      <button type="button" class="slider__navigation slider__navigation--left">
+      <div class="slider__outer-wrapper">
+      </div>
+      <button type="button" class="slider__navigation slider__navigation--left" data-action="prevSlide">
         <svg class="slider__icon" width="40" height="40">
           <use href="./images/sprite.svg#icon-arrow-left"></use>
         </svg>
       </button>
-      <button type="button" class="slider__navigation slider__navigation--right">
+      <button type="button" class="slider__navigation slider__navigation--right" data-action="nextSlide">
         <svg class="slider__icon" width="40" height="40">
           <use href="./images/sprite.svg#icon-arrow-right"></use>
         </svg>
       </button>
-      <div class="slider__dots-wrapper">
-        <ul class="slider__dots list">
-          <li class="slider__dot">
-            <img
-              src="./images/hanna-hryhorieva.jpg"
-              class="slider__dot-photo"
-              width="40"
-              alt="Hanna Hryhorieva"
-            />
-          </li>
-          <li class="slider__dot"></li>
-          <li class="slider__dot"></li>
-          <li class="slider__dot"></li>
-          <li class="slider__dot"></li>
-          <li class="slider__dot"></li>
-          <li class="slider__dot"></li>
-          <li class="slider__dot"></li>
-        </ul>
-      </div>
     </div>
   </div>
 </div>
