Add pagination html and css styles

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,6 +11,7 @@
 @import './base/page-container';
 @import './base/container';
 @import './layouts/header';
+@import './layouts/pagination';
 
 @import './components/_modal';
 @import './components/footer-modal';
