--- a/src/sass/layouts/_one-card.scss
+++ b/src/sass/layouts/_one-card.scss
@@ -2,6 +2,7 @@
   &__img {
     border-radius: 5px;
     height: 100%;
+    width: 100%;
     object-fit: cover;
   }
   &__box-img {
@@ -10,11 +11,11 @@
     margin-bottom: 10px;
 
     @include for-responsive-only {
-      max-width: 280px;
+      width: 280px;
       height: 398px;
     }
     @include for-phone-only {
-      max-width: 280px;
+      width: 280px;
       height: 398px;
     }
     @include for-tablet-down {
@@ -37,7 +38,7 @@
       max-width: 280px;
     }
     @include for-tablet-down {
-      width: 294px;
+      width: 280px;
     }
 
     @include for-desktop-up {
