--- a/src/sass/layouts/_one-card.scss
+++ b/src/sass/layouts/_one-card.scss
@@ -32,15 +32,14 @@
     margin-left: auto;
     margin-right: auto;
     @include for-responsive-only {
-      max-width: 280px;
+      min-width: 280px;
     }
     @include for-phone-only {
-      max-width: 280px;
-    }
-    @include for-tablet-down {
       width: 280px;
     }
-
+    @include for-tablet-down {
+      width: 294px;
+    }
     @include for-desktop-up {
       width: 274px;
     }
