--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -1,10 +1,13 @@
-.home-header_img {
+.header-section {
   width: 100%;
   height: 230px;
-  background: rgba(0, 0, 0, 0.56);
+  background-color: rgba(0, 0, 0, 0.56);
   background-position: bottom right;
   background-size: cover;
   background-repeat: no-repeat;
+}
+
+.home-header_img {
   background-image: url("./../images/headerbg/bgimg.jpg");
 
   @media screen and (min-resolution:2dppx){
@@ -28,12 +31,37 @@
     }
 }
 
+
+.library-header_img{
+  background-image: url("./../images/headerbg/libraryimg.jpg");
+
+  @media screen and (min-resolution:2dppx){
+  background-image:url("./../images/headerbg/libraryimg@2x.jpg")
+  }
+
+  @media screen and (min-width:$mobile-width) and (max-width:$tablet-width) {
+    background-image: url("./../images/headerbg/libraryimg760.jpg");
+  }
+
+  @media screen and (min-resolution:2dppx)and (min-width:$mobile-width) and (max-width:$tablet-width){
+    background-image:url("./../images/headerbg/libraryimg760@2x.jpg");
+    }
+
+  @media screen and (min-width:$tablet-width){
+    background-image: url("./../images/headerbg/libraryimg1024.jpg");
+  }
+
+  @media screen and (min-resolution:2dppx)and (min-width:$tablet-width){
+    background-image:url("./../images/headerbg/libraryimg1024@2x.jpg");
+    }
+}
+
 .page-header {
   padding-left: 20px;
   padding-right: 20px;
   padding-top: 48px;
 
-  @media screen and (min-width:$mobile-width){
+  @include for-phone-up{
     padding-right: 71px;
     padding-left: 71px;
   }
@@ -45,7 +73,7 @@
   line-height: 35px;
   font-weight: normal;
   
-  @media screen and (max-width:$mobile-width) {
+  @include for-phone-only {
     display: none;
   }
 }
@@ -57,7 +85,7 @@
 
   margin-bottom: 61px;
 
-  @media screen and (max-width:$mobile-width){
+  @include for-responsive-only {
     align-items: flex-end;
   }
 }
@@ -65,17 +93,16 @@
 .header-logo {
   display: flex;
   align-items: center;
+  text-decoration: none;
 
-  .header__icon-film {
-    margin-right: 12px;
+  h1{
+    margin-left: 12px;
   }
 }
 
 .page-nav_wrapper{
   color: $header-text-color;
   
-  font-family: Roboto;
-  font-style: normal;
   font-weight: 500;
   font-size: 12px;
   line-height: 14px;
@@ -88,15 +115,23 @@
   }
 }
 
+.nav-el_button {
+  color: $accent-text-color;
+  text-transform: uppercase;
+  background-color: transparent;
+  font-size: 14px;
+  border: none;
+}
+
 .nav-el {
   position: relative;
   padding-bottom:2px;
   text-decoration:none;
   
 
-  &:hover,
-  &:focus {
+  &:hover {
     color: $accent-color;
+    transition: get-transition-prop(color);
   }
 }
 
@@ -118,7 +153,7 @@
   margin: auto;
   width: 100%;
 
-  @media screen and (min-width:$tablet-width){
+  @include for-tablet-up {
     max-width: 336px;
   }
 
@@ -130,6 +165,13 @@
     border: none;
     border-bottom: 0.5px solid $accent-text-color;
     width: 100%;
+
+    // &::after {
+    //   content: '';
+    //   display: block;
+    //   position: absolute;
+    //   background: url("../../images/sprite.svg#icon-search");
+    // }
 
     &::placeholder{
       color: $accent-text-color;
@@ -173,7 +215,7 @@
   border-radius: 5px;
   display: block;
 
-  @media screen and (min-width:$mobile-width){
+  @include for-phone-up{
     width: 136px;
   }
 }
