changes in styles for modal window

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,7 +12,7 @@
 @import './base/container';
 @import './layouts/header';
 
-@import './components/_modal';
+@import './components/modal';
 @import './components/footer-modal';
 
 @import './layouts/footer';
