--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -19,6 +19,14 @@
   }
 }
 
+ul {
+  margin: 0;
+}
+
+li {
+  list-style: none;
+}
+
 .modal__close {
   margin: 0;
   padding: 0;
@@ -41,4 +49,65 @@
 
 .modal__icon {
   fill: currentColor;
+}
+
+// .modal {
+//   position: relative;
+//   min-width: 280px;
+//   background-color: white;
+//   padding: 48px 28px;
+// }
+
+.poster {
+  width: 240px;
+  height: 100px;
+  background-color: gray;
+}
+
+.properties-list {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.property-item {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.property-span {
+  border: 1px solid grey;
+}
+
+.movie-name {
+  height: 21px;
+  background-color: gray;
+  margin-top: 30px;
+}
+
+.about-movie {
+  height: 20px;
+  border: 1px solid grey;
+  margin-bottom: 21px;
+  margin-top: 10px;
+}
+
+.modal-window-buttons {
+  width: 100%;
+  display: inline-flex;
+  justify-content: space-between;
+}
+
+.modal-window-btn {
+  width: 113px;
+  height: 44px;
+  background-color: inherit;
+  border: 1px solid black;
+  border-radius: 5px;
+  &:hover,
+  &:focus {
+    color: white;
+    background-color: $accent-color;
+    border-color: $accent-color;
+  }
 }
