changes in header and search
- changed the definition of elements after their rendering;

- icon changed to button;

--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -178,10 +178,12 @@
     }
   }
 
-  .icon-search{
+  .button-search{
     position: absolute;
     right: 3px;
     top: 2px;
+    background-color: transparent;
+    border: none;
   }
 }
 
