add functionality watched button

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -18,4 +18,5 @@
 
 @import './layouts/footer';
 @import './layouts/films-list-section';
+@import './layouts/film-list-is-empty';
 @import './layouts/one-card';
