--- a/src/templates/team-slider-markup.hbs
+++ b/src/templates/team-slider-markup.hbs
@@ -3,11 +3,24 @@
     <li class="slide">
       <article class="footer-modal__card card">
         <div class="card__team-info">
-          <img src="{{photoUrl}}" class="card__photo" alt="{{fullName}}" />
+          <picture>
+            <source media="(min-width: 1024px)" srcset="
+                          {{photoUrl}}-desktop.jpg    1x,
+                          {{photoUrl}}@2x-desktop.jpg 2x
+                        " />
+            <source media="(min-width: 768px)" srcset="
+                          {{photoUrl}}-tablet.jpg    1x,
+                          {{photoUrl}}@2x-tablet.jpg 2x
+                        " />
+            <img  class="card__photo" srcset="
+                          {{photoUrl}}-mobile.jpg    1x,
+                          {{photoUrl}}@2x-mobile.jpg 2x
+                        " src="{{photoUrl}}-desktop.jpg" alt="{{fullName}}" />
+          </picture>
           <p class="card__name">
             <a href="{{githubUrl}}" target="_blank" rel="noopener noreferrer"><svg
-                class="card__icon" width="18" height="16">
-                <use href="./images/sprite.svg#icon-github"></use>
+                class="card__icon" width="24" height="22">
+                <use href="sprite.svg#icon-github"></use>
               </svg></a>{{fullName}}
           </p>
           <p class="card__city">{{city}}</p>
@@ -26,7 +39,7 @@
     <ul class="slider__dots list">
       {{#each this}}
       <li class="slider__dot">
-        <img src="{{photoUrl}}" class="slider__dot-photo" width="40" alt="{{fullName}}" />
+        <img src="{{photoUrl}}-tablet.jpg" class="slider__dot-photo" width="40" alt="{{fullName}}" />
       </li>
       {{/each}}
     </ul>
