--- a/src/templates/one-card-markup.hbs
+++ b/src/templates/one-card-markup.hbs
@@ -7,8 +7,7 @@
       <div class='one-card__title-box'>
         <h4 class='one-card__title'>{{title}}</h4>
         <div class='one-card__box-description'>
-          <p class='one-card__description'>{{stringGenres}}<span class='one-card__year'>
-              {{releaseYear}}</span>
+          <p class='one-card__description'>{{stringDescription}}
             <div class='one-card__average visually-hidden'>{{vote_average}}</div></p>
         </div>
       </div>
