--- a/src/templates/modalWindowMovie.hbs
+++ b/src/templates/modalWindowMovie.hbs
@@ -5,7 +5,7 @@
         <use href='./images/sprite.svg#icon-close'></use>
       </svg>
     </button>
-    <img src='#' alt='poster' class='poster' />
+    <img src={{posterUrl}} alt={{title}} class='poster' />
     <h2 class='movie-name'></h2>
     <ul class='properties-list'>
       <li class='property-item'><span>Vote/Votes</span><span class='property-span'></span></li>
