--- a/src/templates/one-card-markup.hbs
+++ b/src/templates/one-card-markup.hbs
@@ -1,5 +1,5 @@
 {{#each this}}
-  <li class='films__list-item'>
+  <li class='films__list-item' data-id={{id}}>
     <div class='one-card'>
       <div class='one-card__box-img'>
         <img class='one-card__img' src={{posterUrl}} alt={{title}} />
