--- a/src/sass/layouts/_film-list-is-empty.scss
+++ b/src/sass/layouts/_film-list-is-empty.scss
@@ -1,7 +1,6 @@
 .list-is-empty__text {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
 
   font-size: 15px;
   font-weight: 500;
