--- a/src/sass/layouts/_one-card.scss
+++ b/src/sass/layouts/_one-card.scss
@@ -40,6 +40,7 @@
     text-transform: uppercase;
   }
   &__description {
+    margin-right: 10px;
     display: block;
     color: $accent-color;
     font-weight: 500;
