--- a/src/templates/header.hbs
+++ b/src/templates/header.hbs
@@ -17,8 +17,8 @@
   {{else}}
       <div class="library-header__button-wrapper">
         <ul class="library-header__button-container">
-          <li><button type="button" class="library-button library-button_active">Watched</button></li>
-          <li><button type="button" class="library-button">queue</button></li>
+          <li><button type="button" class="library-button library-button_active" page="watched">Watched</button></li>
+          <li><button type="button" class="library-button"page="queue">queue</button></li>
         </ul>
       </div>
   {{/if}}
