connected app parts together

--- a/src/templates/modalWindowMovie.hbs
+++ b/src/templates/modalWindowMovie.hbs
@@ -21,8 +21,8 @@
     <h3>About</h3>
     <p class='about-movie'>{{overview}}</p>
     <div class='modal-window-buttons'>
-      <button type='button' class='modal-window-btn'>ADD TO WATCHED</button>
-      <button type='button' class='modal-window-btn'>ADD TO QUEUE</button>
+      <button type='button' class='modal-window-btn' data-action="add-to-watched">ADD TO WATCHED</button>
+      <button type='button' class='modal-window-btn' data-action="add-to-queue">ADD TO QUEUE</button>
     </div>
   </div>
 </div>
